@@ -552,6 +552,9 @@ inlead,	   0x5C14B0,	0x5D0040,	0x5C11C0,	"Unit_can_airdrop",				"bool (__fastcal
 inlead,	   0x5DF8D0,	0x5EF120,	0x5DF800,	"City_Improvements_contains",			"bool (__fastcall *) (City_Improvements * this, int edx, int id)"
 inlead,	   0x5DF890,	0x5EF0E0,	0x5DF7C0,	"City_Improvements_set",			"void (__fastcall *) (City_Improvements * this, int edx, int id, bool add_else_remove)"
 repl call, 0x4B47C9,	0x4BB7B9,	0x4B4859,	"Leader_has_tech_to_stop_disease",		""
+define,	   0x5D59E0,	0x5E4E20,	0x5D5910,	"Map_change_tile_terrain",			"void (__fastcall *) (Map * this, int edx, enum SquareTypes new_terrain_type, int x, int y)"
+repl call, 0x461833,	0x463CAF,	0x4618B3,	"Map_change_tile_terrain_by_worker",		""
+inlead,	   0x461470,	0x4638C0,	0x4614F0,	"Unit_work_simple_job",				"void (__fastcall *) (Unit * this, int edx, int job_id)"
 
 ignore,	   0x4507B0,	0x452860,	0x0,		"Unit_ai_move_offensive_unit",			"void (__fastcall *) (Unit * this)"
 ignore,    0x44C340,	0x0,		0x0,		"Unit_ai_eval_bombard_target",			"int (__fastcall *) (Unit * this, int edx, int tile_x, int tile_y, int param_3)"
