@@ -549,3 +549,6 @@ show_hp_of_stealth_attack_options = false
 
 ; Stops invisible units from being targeted by stealth attacks. They can still be targeted if they've been revealed by the attacking civ.
 exclude_invisible_units_from_stealth_attack = false
+
+; Normally planting a forest always produces the regular non-LM forest terrain. This option changes that so it instead produces LM forest.
+convert_to_landmark_after_planting_forest = false
